Create user for db

--- a/database/sqitch.conf
+++ b/database/sqitch.conf
@@ -6,3 +6,9 @@
 	# target = db:mysql:
 	# registry = sqitch
 	# client = mysql
+[target "morzod"]
+	uri = db:mysql://root@localhost/morzod
+[deploy]
+	verify = true
+[rebase]
+	verify = true
