Default pg target

--- a/databasepg/sqitch.conf
+++ b/databasepg/sqitch.conf
@@ -2,7 +2,9 @@
 	engine = pg
 	# plan_file = sqitch.plan
 	# top_dir = .
-# [engine "pg"]
-	# target = db:pg:
+[engine "pg"]
+	target = morzod
 	# registry = sqitch
 	# client = psql
+[target "morzod"]
+	uri = db:pg:morzod
